--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  height: 100vh;
+:root {
+  --white:#E9E9E7;
+  --gray1:#454646;
+  --gray2:#7F7F7E;
+  --yellow1:#FDD673;
+  --yellow2:#f5e7a8;
+  --orange1:#EE674E;
+  --orange2:#F5A495;
+  --red1:#c05462;
+  --red2:#f394ac;
+  --purple1:#af62f7;
+  --purple2:#c998f8;
+  --blue1:#5366B2;
+  --blue2:#92adf7;
+  --green1:#438a72;
+  --green2:#A7D6AF;
 }
+/* body {
+  height: 100vh;
+} */
 
 .ql-editor {
   font-size: 1.05rem;
@@ -39,9 +56,3 @@ body {
 .dark .post-content a {
   color: red;
 }
-/* 
-input[type="text"]:focus ~ .input-text,
-input[type="email"]:focus ~ .input-text,
-input[type="password"]:focus ~ .input-text{
-  @apply text-neutral-600 transform -translate-y-6 -translate-x-1
-} */
