--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --white:#E9E9E7;
+  /* --white:#E9E9E7;
   --gray1:#454646;
   --gray2:#7F7F7E;
   --yellow1:#FDD673;
@@ -17,7 +17,16 @@
   --blue1:#5366B2;
   --blue2:#92adf7;
   --green1:#438a72;
-  --green2:#A7D6AF;
+  --green2:#A7D6AF; */
+
+  --clr-1:#191d24;
+  --clr-2:#2e3239;
+  --clr-3:#45484e;
+  --clr-4:#8f9195;
+  --clr-5:#2b90e3;
+  --clr-6:#72b0f8;
+  --clr-7:#b1ccf3;
+
 }
 /* body {
   height: 100vh;
